button splatter z-index fix

--- a/assets/base.css
+++ b/assets/base.css
@@ -1275,7 +1275,6 @@ deferred-media {
   height: 30px;
   width: 15%;
   margin-top: 50px;
-  z-index: -5;
   transform: scale(0);
   opacity: 0;
   transition: all var(--duration-default) ease-in-out;
